P4PU-1046 added public endpoint
