# openapi/pagopa-arc-be.openapi.yaml
@@ -564,6 +564,32 @@ paths:
           description: Forbidden - Access denied
         '500':
           description: Internal Server Error
+  /public/brokers/{brokerId}/organizations/spontaneous:
+    get:
+      tags:
+        - Organization
+      summary: "Retrieves the list of organizations with at least one dpto with flagSpontaneous and flagActive set to true for anonymous user"
+      operationId: getPublicOrganizationsWithSpontaneous
+      parameters:
+        - name: brokerId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: "OrganizationsWithSpontaneousDTO"
+        '403':
+          description: Forbidden - Access denied
+        '500':
+          description: Internal Server Error
   /spontaneous/organizations/{organizationId}/debt-position-type-orgs:
     get:
       tags:
@@ -590,6 +616,32 @@ paths:
                   type: "DebtPositionTypeOrgsWithSpontaneousDTO"
         '401':
           description: Unauthorized - Missing or invalid token
+        '403':
+          description: Forbidden - Access denied
+        '500':
+          description: Internal Server Error
+  /public/spontaneous/organizations/{organizationId}/debt-position-type-orgs:
+    get:
+      tags:
+        - DebtPositionTypeOrg
+      summary: "Retrieves the list of debtPositionTypeOrg with flagSpontaneous and flagActive set to true for anonymous user"
+      operationId: getPublicDebtPositionTypeOrgsWithSpontaneous
+      parameters:
+        - name: organizationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: "DebtPositionTypeOrgsWithSpontaneousDTO"
         '403':
           description: Forbidden - Access denied
         '500':
@@ -699,6 +751,8 @@ paths:
         - DebtPositionTypeOrg
       summary: "Retrieves the detail of debtPositionTypeOrg with flagSpontaneous and flagActive set to true"
       operationId: getDebtPositionTypeOrgsWithSpontaneousDetail
+      security:
+        - BearerAuth: [ ]
       parameters:
         - name: brokerId
           in: path
@@ -733,12 +787,90 @@ paths:
           description: Not Found
         '500':
           description: Internal Server Error
+  /public/brokers/{brokerId}/spontaneous/organizations/{organizationId}/debt-position-type-orgs/{debtPositionTypeOrgId}:
+    get:
+      tags:
+        - DebtPositionTypeOrg
+      summary: "Retrieves the detail of debtPositionTypeOrg with flagSpontaneous and flagActive set to true for anonymous user"
+      operationId: getPublicDebtPositionTypeOrgsWithSpontaneousDetail
+      parameters:
+        - name: brokerId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: organizationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: debtPositionTypeOrgId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: "DebtPositionTypeOrgsWithSpontaneousDetailsDTO"
+        '403':
+          description: Forbidden - Access denied
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
   /brokers/{brokerId}/spontaneous/debt-positions:
     post:
       tags:
         - DebtPosition
       summary: "Create spontaneous debt positions"
       operationId: createSpontaneousDebtPosition
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: brokerId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type:  "DebtPositionRequestDTO"
+        required: true
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: "DebtPositionResponseDTO"
+        '400':
+          description: Invalid request
+        '401':
+          description: Unauthorized - Missing or invalid token
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '409':
+          description: Conflict
+        '500':
+          description: Internal server error
+  /public/brokers/{brokerId}/spontaneous/debt-positions:
+    post:
+      tags:
+        - DebtPosition
+      summary: "Create spontaneous debt positions for anonymous user"
+      operationId: createPublicSpontaneousDebtPosition
       parameters:
         - name: brokerId
           in: path
@@ -811,7 +943,7 @@ paths:
   /brokers/{brokerId}/receipts:
     get:
       tags:
-        - receipt
+        - Receipt
       operationId: getPagedDebtorReceipts
       parameters:
         - name: brokerId
